/*
 * $Id: ChangeLog,v 1.2647 2004/03/24 15:44:08 vouchcac Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-25 09:10 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    * Few more fixes. Thanks Luis Krause Mantilla.

2004-03-24 21:20 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    * Overall Changes suggested by Budyanto Dj. Thanks. Now Tbrowse is very near to Clipper's.

2004-03-24 09:30 UTC-0300 Luiz Rafael Culik Guimaraes<culikr@brturbo.com>
   * contrib/hbzlib/zip.c
     ! minor fix
     
2004-03-24 19:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rtl/console.c
     ! fix casting problem due to X__WIN32__ defined/undefined.

2004-03-24 12:57 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/filesys.c
    ! removed redundant ';' which breaks *nix compilation

2004-03-24 11:10 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   * code with cause troubles with GCC optimization (and some other
     C compilers which can change the order of instructions and doesn't
     detect that some of instructions can write to the same place of
     memory using different pointers and casting) replaced
     by byte oriented (a little bit slower but it should not be
     noticeable and I hope it closes this subject.
   ! fixed bug which cause GPF when FOR index condition were used
      reported by Alexander Kresin (thanks)
   
  * xharbour/source/rtl/filesys.c
    ! fixed MING32 compilation I broke in last commit

2004-03-24 15:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/compiler/genc.c
   * source/compiler/hbgenerr.c
     ! minor correction on formatted-printing for some compiler(s) which
       cannot perform: [s][f]printf("<%s>",string) correctly. :-).