@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2647 2004/03/24 15:44:08 vouchcac Exp $
+ * $Id: ChangeLog,v 1.2648 2004/03/25 03:17:21 vouchcac Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-25 10:46 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
+  * source/rtl/hbxml.c
+    ! There was a sporadic error in tag closure parsing.
+    ! Fixed error description.
 
 2004-03-25 09:10 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
   * xharbour/source/rtl/tbrowse.prg
